# openai-cxx

./: CMakeLists.txt  LICENSE  main.cpp
inc/priv/: completion-service.hpp  fake-connector.hpp  http-connector.hpp  make.hpp  mock-connector.hpp  rest-connector.hpp  ser-des.hpp
inc/pub/: completion.hpp  openai.hpp
src/priv/: completion-service.cpp  fake-connector.cpp  http-connector.cpp  mock-connector.cpp
src/pub/: completion.cpp
tests/: CMakeLists.txt  main.cpp
tests/priv/: CMakeLists.txt  completion-service.cpp  fake-connector.cpp  mock-connector.cpp  rest-connector.cpp
